Update styling and gesture
Removed pointer events from mapbox while scrolling
Updated styling of darien gap territory layer over mapbox

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 Desperate families and young people went back into the gap in unprecedented numbers.
               </p>
               <p class="source-note">
-                Source: The New Humanitarian (Jan. 2024). Replace with confirmed dataset.
+                Source: The New Humanitarian (Jan. 2024).
               </p>
             </div>
             </article>
