--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                   <strong>520,085</strong>
                   <span>
                     migrants crossed the Darién Gap in 2023, which is more than double the year
-                    before — risking death in one of the world's most dangerous journeys.
+                    before, risking death in one of the world's most dangerous journeys - and that, is only the official number.
                   </span>
                 </p>
                 <p class="byline">Kuhika Shrivastava</p>
@@ -195,7 +195,7 @@
               <div style="min-height:705px" id="datawrapper-vis-nsHUc"><script type="text/javascript" defer src="https://datawrapper.dwcdn.net/nsHUc/embed.js" charset="utf-8" data-target="#datawrapper-vis-nsHUc"></script><noscript><img src="https://datawrapper.dwcdn.net/nsHUc/full.png" alt="A grid of small-multiple bar charts showing the number of migrants from major nationalities crossing the Darién Gap in 2019, 2021, 2022, 2023, and 2024. Venezuelan migration rises sharply, reaching more than 320,000 in 2023 and over 200,000 in 2024. Haiti, Ecuador, Cuba, China, Colombia, and “Other” categories appear in each panel. All panels use the same scale for comparability." /></noscript></div>
               <p>
                 Panama’s National Migration Service keeps annual totals of those who make it through. 
-                A chart of yearly crossings (2018–2024) would show this climb: from 8,445 in 2018 to 221,102 in 2019, a dip to 8,594 in 2020 (during COVID), then 133,653 in 2021, 248,784 in 2022 and 520,085 in 2023 (the peak). 
+                The data of yearly crossings (2018–2024) shows this climb: from 8,445 in 2018 to 221,102 in 2019, a dip to 8,594 in 2020 (during COVID), then 133,653 in 2021, 248,784 in 2022 and 520,085 in 2023 (the peak). 
                 Official reports for 2024 list 302,203 crossings. These public figures were confirmed by Panama’s migration authorities and by independent monitoring groups.
               </p>
               <p>
