--- a/index.html
+++ b/index.html
@@ -165,10 +165,10 @@
               <p>
                 Migrants are crossing the Darién in record numbers. 
                 After a pause during the early pandemic years, unauthorized migration through Panama exploded. 
-                In 2018, though, fewer than 9,000 people crossed and by 2023, the total was 520,085 – an almost six-fold jump in just two years. 
+                Panama’s National Migration Service keeps annual totals of those who make it through. The data of yearly crossings (2018–2024) shows this climb: from 8,445 in 2018 to 221,102 in 2019, a dip to 8,594 in 2020 (during COVID), then 133,653 in 2021, 248,784 in 2022 and 520,085 in 2023 (the peak). 
+                Official reports for 2024 list 302,203 crossings. These public figures were confirmed by Panama’s migration authorities and by independent monitoring groups.
                 That year set a new global record for this route. If compared, only “a couple hundred people annually” attempted this trek a decade ago. 
-                The spike eased somewhat in 2024. 
-                Panama’s migration service logged 302,203 crossings, down 42% from the previous year.
+                The spike eased somewhat in 2024.
               </p>
               <p>
                 The 2023 surge had many drivers - changing migration policies across Latin America had left very few legal routes, the U.S. rescinded Title 42 at the start of 2023, ending a pandemic-era rule that had quickly expelled many asylum-seekers at the border. 
@@ -193,11 +193,7 @@
             >
               <h2>Who Is Crossing?</h2>
               <div style="min-height:705px" id="datawrapper-vis-nsHUc"><script type="text/javascript" defer src="https://datawrapper.dwcdn.net/nsHUc/embed.js" charset="utf-8" data-target="#datawrapper-vis-nsHUc"></script><noscript><img src="https://datawrapper.dwcdn.net/nsHUc/full.png" alt="A grid of small-multiple bar charts showing the number of migrants from major nationalities crossing the Darién Gap in 2019, 2021, 2022, 2023, and 2024. Venezuelan migration rises sharply, reaching more than 320,000 in 2023 and over 200,000 in 2024. Haiti, Ecuador, Cuba, China, Colombia, and “Other” categories appear in each panel. All panels use the same scale for comparability." /></noscript></div>
-              <p>
-                Panama’s National Migration Service keeps annual totals of those who make it through. 
-                The data of yearly crossings (2018–2024) shows this climb: from 8,445 in 2018 to 221,102 in 2019, a dip to 8,594 in 2020 (during COVID), then 133,653 in 2021, 248,784 in 2022 and 520,085 in 2023 (the peak). 
-                Official reports for 2024 list 302,203 crossings. These public figures were confirmed by Panama’s migration authorities and by independent monitoring groups.
-              </p>
+
               <p>
                 This trend shows how politics and crisis affect migration. 
                 A wave of Venezuelan migrants began arriving after 2021, showing rapid growth. 
@@ -248,8 +244,7 @@
                   IOM’s Missing Migrants Project and other investigators track fatalities here. 
                   Their data show several trends. Deaths spiked in 2024 even as crossings dipped slightly. 
                   2024 saw 174 documented deaths or disappearances, surpassing the previous 146 in 2022. 
-                  (Lower figures for 2020–2021 reflect fewer migrants then.) 
-                  It’s worth noting that 2024’s 174 dead all occurred between January-August, whereas data for late 2024 and early 2025 was still being collected. 
+                  (Lower figures for 2020–2021 reflect fewer migrants then.)  
                   Together, those years mark the deadliest period on record in the Darién.
                 </p>
                 </div>
@@ -284,7 +279,6 @@
                   Migrants also perish in hun­dreds on routes off-season. 
                   The monthly fatalities (aggregating all years) peaks in January (125 deaths) and March (94), then narrows in the summer. 
                   January is especially lethal because it coincides with a migration spike after end-of-year holidays and before spring weather worsens.
-                   For example, IOM noted that January–March 2024 was unusually deadly.
                 </p>
                 </div>
                 </article>
